; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/rtwn/extr_if_rtwn_rx.c_rtwn_get_tsf.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/rtwn/extr_if_rtwn_rx.c_rtwn_get_tsf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtwn_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rtwn_softc*, i32*, i32)* @rtwn_get_tsf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtwn_get_tsf(%struct.rtwn_softc* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.rtwn_softc*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.rtwn_softc* %0, %struct.rtwn_softc** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.rtwn_softc*, %struct.rtwn_softc** %4, align 8
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @rtwn_get_tsf_high(%struct.rtwn_softc* %7, i32 %8)
  %10 = load i32*, i32** %5, align 8
  store i32 %9, i32* %10, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %11, align 4
  %13 = shl i32 %12, 32
  store i32 %13, i32* %11, align 4
  %14 = load %struct.rtwn_softc*, %struct.rtwn_softc** %4, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i64 @rtwn_get_tsf_low(%struct.rtwn_softc* %14, i32 %15)
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* %17, align 4
  %19 = sext i32 %18 to i64
  %20 = add nsw i64 %19, %16
  %21 = trunc i64 %20 to i32
  store i32 %21, i32* %17, align 4
  ret void
}

declare dso_local i32 @rtwn_get_tsf_high(%struct.rtwn_softc*, i32) #1

declare dso_local i64 @rtwn_get_tsf_low(%struct.rtwn_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
